gameFragment and fragmentResult

--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -14,7 +14,7 @@
         android:textSize="25sp"
         android:textColor="@color/white"
         android:fontFamily="@font/annie_use_your_telescope"
-        android:text="the required number of correct answers"
+        android:text="@string/the_required_number_s_of_correct_answers_s"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/score_answer"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +29,7 @@
         android:textSize="25sp"
         android:textColor="@color/white"
         android:fontFamily="@font/annie_use_your_telescope"
-        android:text="score"
+        android:text="@string/score_s"
     android:layout_marginTop="16dp"
     app:layout_constraintBottom_toTopOf="@id/percenteg"
         app:layout_constraintStart_toStartOf="@id/req_answer"
@@ -44,7 +44,7 @@
         android:textColor="@color/white"
     android:layout_marginTop="16dp"
     android:fontFamily="@font/annie_use_your_telescope"
-        android:text="Required percentage of correct answers"
+        android:text="@string/required_percentage_of_correct_answers_s"
     app:layout_constraintBottom_toTopOf="@id/percent_right_answer"
         app:layout_constraintStart_toStartOf="@id/score_answer"
         app:layout_constraintEnd_toEndOf="@id/score_answer"
@@ -58,7 +58,7 @@
     android:layout_marginTop="16dp"
     android:textColor="@color/white"
         android:fontFamily="@font/annie_use_your_telescope"
-        android:text="percentage of correct answers"
+        android:text="@string/percentage_of_correct_answers_s_min_s"
         app:layout_constraintStart_toStartOf="@id/percenteg"
         app:layout_constraintEnd_toEndOf="@id/percenteg"
         app:layout_constraintTop_toBottomOf="@id/percenteg"
