--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -62,7 +62,7 @@
         android:background="@drawable/button_background"
         android:fontFamily="@font/annie_use_your_telescope"
         android:gravity="center"
-        android:text="46"
+        android:text="?"
         android:textColor="@color/white"
         android:textSize="100sp"
         app:layout_constraintBottom_toBottomOf="@id/text_num"
