--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main_container"
-    android:name="org.myapp.andreysumin2.presentation.WelcomeFragment"
+    android:name="androidx.navigation.fragment.NavHostFragment"
+    app:navGraph="@navigation/navigation_in_main"
+    app:defaultNavHost = "true"
     tools:context=".MainActivity">
-
-
 </androidx.fragment.app.FragmentContainerView>
